package com.randioo.mahjong_public_server.protocol;

import "Entity.proto";

message MatchCreateGameRequest{
	optional GameConfigData gameConfigData = 1;
}

message MatchCreateGameResponse{
	optional int32 errorCode = 1[default = 1];
	optional string id = 2;
	optional bool moguai = 3;
	optional GameRoleData gameRoleData = 4;
}

message MatchJoinGameRequest{
	optional string lockString = 1;
}

message MatchJoinGameResponse{
	optional int32 errorCode = 1[default = 1];
	optional RoundVideoData RoundVideoData = 2 ; //所有推送数据
    optional string roomId = 3 ; //房间号
}

message SCMatchJoinGame{
	optional GameRoleData gameRoleData = 1;
	optional bool isMe = 2;
}

message SCMatchMineInfo{
	optional GameRoleData gameRoleData = 1;
}

message SCMatchCreateGame{
	optional string roomId = 1;
	optional int32 roomType = 2;
	optional int32 roundNum = 3;
	optional GameRoleData gameRoleData = 4;
}

message MatchCheckRoomRequest{
	optional string roomId =1;
	
}

message MatchCheckRoomResponse{
	optional bool exist = 1;
}